# vuxn

./: README.md
bouc/: meson.build
bouc/data/: app.desktop.in.in  gresource.xml.in
bouc/src/: application.vala  utils.vala  window.vala
calendar/: README  meson.build
calendar/data/: app.desktop.in.in  gresource.xml.in  style.css
calendar/src/: application.vala  calendarview.vala  evententry.vala  eventmanager.vala  meson.build  utils.vala  window.vala
cccc/: meson.build
cccc/data/: app.desktop.in.in  gresource.xml.in  style.css
cccc/src/: application.vala  audio.vala  indicator.vala  meson.build  pip.vala  utils.vala  window.vala
clock/: README  meson.build
clock/data/: app.desktop.in.in  style.css
clock/data/icons/: meson.build
clock/src/: application.vala  meson.build  utils.vala  window.vala
color/: meson.build
color/data/: app.desktop.in.in  gresource.xml.in  style.css
color/src/: application.vala  meson.build  picker.vala  utils.vala  window.vala  x11_helper.c  x11_helper.h
conf/: README  meson.build
conf/data/: app.desktop.in.in  style.css
conf/src/: application.vala  meson.build  picker.vala  utils.vala  window.vala
corda/: meson.build
corda/data/: app.desktop.in.in  gresource.xml.in  style.css
corda/src/: application.vala  utils.vala  window.vala
ditto/: README  meson.build
ditto/data/: com.example.ditto.desktop  com.example.ditto.gresource.xml  style.css
ditto/src/: application.vala  indicator.vala  utils.vala  window.vala
donsol/: meson.build
donsol/data/: com.example.donsol.desktop  com.example.donsol.gresource.xml
donsol/src/: card.vala  card_data.vala  constants.vala  deck.vala  donsol.vala  game.vala  meson.build  player.vala  renderer.vala  room.vala  sprite.vala  theme.vala  window.vala
hexedit/: meson.build
hexedit/data/: app.desktop.in.in  style.css
hexedit/src/: application.vala  asciiview.vala  hexview.vala  meson.build  utils.vala  window.vala
iconchar/: meson.build
iconchar/data/: app.desktop.in.in  gresource.xml.in
iconchar/src/: application.vala  bottom_bar.vala  data.vala  file_handler.vala  filename_component.vala  meson.build  view.vala  window.vala
libtheme/: README.md  meson.build
libtheme/data/: base-styles.css  lib.gresources.xml
libtheme/demo/: demo.vala  meson.build
libtheme/src/: meson.build  theme-manager.vala
log/: main  main.vala  meson.build
log/data/: app.desktop.in.in  gresource.xml.in
log/src/: assets.vala  main.vala  meson.build  renderer.vala
m192/: README  meson.build
m192/data/: app.desktop.in.in  gresource.xml.in  style.css
m192/src/: application.vala  indicator.vala  marquee.vala  meson.build  utils.vala  window.vala
mines/: meson.build
mines/data/: app.desktop.in.in  gresource.xml.in  style.css
mines/src/: application.vala  utils.vala  window.vala
neralie/: main  neralie.vala
notes/: meson.build
notes/data/: app.desktop.in.in  gresource.xml.in  style.css
notes/src/: application.vala  checkbox.vala  meson.build  textview.vala  utils.vala  window.vala
nowlog/: com.example.nowlog.desktop.in.in  meson.build  nowlog.vala  shard.vala  shardgrid.vala  style.css
numfor/: meson.build
numfor/data/: app.desktop.in.in  gresource.xml.in  style.css
numfor/src/: application.vala  utils.vala  window.vala
orca/: meson.build
orca/data/: app.desktop.in.in  com.example.orca.desktop  com.example.orca.gresource.xml  gresource.xml.in  meson.build  style.css
orca/data/icons/: meson.build
orca/src/: main.vala  meson.build  orca_app.vala  orca_engine.vala  orca_grid.vala  orca_midi.vala  orca_synth.vala  orca_window.vala
right/: meson.build
right/data/: app.desktop.in.in  gresource.xml.in  style.css  style.css.bak
right/src/: application.vala  meson.build  symbolsidebar.vala  terminalpanel.vala  utils.vala  window.vala  window.vala.bak
ronin/: meson.build
ronin/data/: com.example.ronin.desktop.in  com.example.ronin.gresource.xml  meson.build  prelude.lisp  style.css
ronin/src/: lain.vala  main.vala  meson.build  ronin.vala
shanghai/: meson.build
shanghai/data/: app.desktop.in.in  com.example.shanghai.gschema.xml  gresource.xml.in  style.css
shanghai/src/: application.vala  meson.build  tiles.vala  utils.vala  window.vala
shav/: meson.build
shav/data/: app.desktop.in.in  gresource.xml.in  style.css
shav/src/: application.vala  assets.vala  meson.build  utils.vala  window.vala
term/: README  meson.build
term/data/: app.desktop.in.in
term/src/: application.vala  meson.build  utils.vala  window.vala
turquoise/: meson.build
turquoise/data/: app.desktop.in.in  gresource.xml.in  meson.build  style.css
turquoise/src/: application.vala  utils.vala  window.vala
turye/: meson.build
turye/data/: app.desktop.in.in  style.css
turye/src/: application.vala  application.vala.bak  utils.vala  window.vala  window.vala.bak
turye/vapi/: freetype.vapi
tyne/: README  meson.build
tyne/data/: app.desktop.in.in  gresource.xml.in
tyne/src/: application.vala  utils.vala  window.vala
vasic/: README  meson.build
vasic/data/: app.desktop.in.in  gresource.xml.in
vasic/src/: application.vala  application.vala.bak  meson.build  utils.vala  window.vala  window.vala.bak
vasu/: README.md  meson.build
vasu/data/: app.desktop.in.in  gresource.xml.in
vasu/src/: application.vala  bottom_bar.vala  data.vala  editorview.vala  file_handler.vala  filename_component.vala  framebox.vala  menu_component.vala  meson.build  picker.vala  previewview.vala  top_bar.vala  window.vala
voodle/: meson.build
voodle/data/: app.desktop.in.in  gresource.xml.in  style.css
voodle/src/: application.vala  drawing.vala  meson.build  utils.vala  window.vala
